<resources>
    <string name="app_name">Tickle</string>

    <string name="coming_soon">커밍순</string>
    <string name="category">카테고리</string>
    <string name="bestCoupon">베스트쿠폰</string>
    <string name="todayCoupon">오늘의쿠폰</string>

    <string name="myCoupon">내쿠폰</string>
    <string name="changeCondition">교환현황</string>
    <string name="all">전체</string>
    <string name="close">내 주변</string>
    <string name="food">음식점</string>
    <string name="cloth">의류</string>
    <string name="beauty">뷰티</string>
    <string name="shopping">생활/쇼핑</string>
    <string name="leisure">레저</string>
    <string name="book">도서</string>

    <string name="sortCoupon">쿠폰정렬</string>
    <string name="suggestSort">제안순</string>
    <string name="changeSort">교환순</string>
    <string name="useSort">사용량순</string>

    <string name="interestTickle">관심 쿠폰</string>

    <string name="collectTickle">내가 모은 쿠폰</string>

    <string name="changing">교환중</string>
    <string name="changed">교환완료</string>

    <string name="use">사용하기</string>
    <string name="change">교환하기</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="barcodeDescription">바코드 생성 버튼을 누르면 모은 쿠폰 티클 금액만큼\n할인이 반영된 할인 쿠폰이 생성됩니다.</string>
    <string name="createBarcode">쿠폰 바코드 생성</string>

    <string name="storeInformation">매장 정보</string>
    <string name="telephone">전화번호</string>
    <string name="note">유의사항</string>
    <string name="address">주소</string>
    <string name="businessHours">영업시간</string>
    <string name="otherNote">기타사항</string>

    <string name="changeCoupon">쿠폰 교환</string>
    <string name="useCoupon">쿠폰 사용</string>
    <string name="login">로그인</string>
    <string name="signUp">회원가입</string>
    <string name="setting">설정</string>


</resources>
