<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="42dp"
    android:background="@color/white"
    android:elevation="1dp">

    <LinearLayout
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="11dp">

        <ImageView
            android:id="@+id/cancelButton"
            android:paddingLeft="9dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="9dp"
            android:src="@mipmap/icon_delete" />

        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:background="@color/grayBackground" />
        <ImageView
            android:paddingLeft="9dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="9dp"
            android:src="@mipmap/icon_sort" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sortCoupon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/changing"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@drawable/selector_best_menu_text"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:paddingRight="9dp"
            android:text="@string/changing" />

        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:background="@color/grayBackground" />

        <TextView
            android:id="@+id/changed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@drawable/selector_best_menu_text"
            android:textSize="15sp"
            android:gravity="center"
            android:paddingLeft="9dp"
            android:paddingRight="12dp"
            android:text="@string/changed" />

    </LinearLayout>
</RelativeLayout>