<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="15dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="80dp"
                android:src="@mipmap/thumbnail"
                android:layout_height="80dp" />
            <LinearLayout
                android:paddingLeft="15dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="버거킹"
                    android:textColor="@color/gray97"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="갈릭 스테이크 버거 세트"
                    android:textColor="@color/black33"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="￦9,500원"
                        android:textColor="@color/gray97"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:src="@mipmap/icon_arrow1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="최대"
                        android:textColor="@color/black3c"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" 8,500원 "
                        android:textColor="@color/redWon"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="할인"
                        android:textColor="@color/black3c"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="18dp"
                        android:src="@mipmap/label_mytickle1" />

                    <TextView
                        android:layout_marginTop="-2dp"
                        android:layout_marginLeft="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="￦148,200"
                        android:textColor="@color/themePink"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/barcodeCreateLayout"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:background="@color/lightGrayBackground"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/black33"
                android:layout_width="wrap_content"
                android:text="@string/barcodeDescription"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/createBarcodeButton"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/themePink"
                android:layout_marginTop="20dp"
                android:layout_width="250dp"
                android:text="@string/createBarcode"
                android:layout_height="40dp" />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/barcodeLayout"
            android:paddingTop="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp"
            android:background="@color/lightGrayBackground"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/barcodeImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="9sp"
                android:gravity="right"
                android:textColor="@color/black33"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:text="2016.06.30 까지 사용가능"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black33"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:text="@string/storeInformation"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/grayBackground"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginBottom="10dp"
                    android:layout_width="92dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/gray99"
                        android:textSize="13sp"
                        android:layout_width="wrap_content"
                        android:text="@string/telephone"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor="@color/gray99"
                        android:textSize="13sp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:text="@string/note"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor="@color/gray99"
                        android:textSize="13sp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:text="@string/address"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/black33"
                        android:textSize="13sp"
                        android:layout_width="wrap_content"
                        android:text="02-1234-5678"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor="@color/black33"
                        android:textSize="13sp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:text="기타 할인 혜택과 중복 사용 불가"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor="@color/black33"
                        android:textSize="13sp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:text="서울시 강남구 역삼동 123"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@mipmap/map"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginBottom="10dp"
                    android:layout_width="92dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/gray99"
                        android:textSize="13sp"
                        android:layout_width="wrap_content"
                        android:text="@string/businessHours"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor="@color/gray99"
                        android:textSize="13sp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:text="@string/otherNote"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/black33"
                        android:textSize="13sp"
                        android:layout_width="wrap_content"
                        android:text="10:00 ~ 18:00 (일요일 휴무)"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor="@color/black33"
                        android:textSize="13sp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:text="애완견 출입 금지 업소"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>