<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:id="@+id/thumbnailView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/thumbnail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/companyNameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="버거킹"
                    android:textColor="@color/gray97"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/nameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="갈릭 스테이크 버거 세트"
                    android:textColor="@color/black33"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/orgPriceView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="￦9,500원"
                        android:textColor="@color/gray97"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:src="@mipmap/icon_arrow1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="최대"
                        android:textColor="@color/black3c"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/discountView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:text="8,500원"
                        android:textColor="@color/redWon"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="할인"
                        android:textColor="@color/black3c"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="18dp"
                        android:src="@mipmap/label_mytickle1" />

                    <TextView
                        android:id="@+id/quantityView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="-2dp"
                        android:text="￦148,200"
                        android:textColor="@color/themePink"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/barcodeCreateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrayBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/barcodeDescription"
                android:textColor="@color/black33"
                android:textSize="12sp" />

            <Button
                android:id="@+id/createBarcodeButton"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/themePink"
                android:text="@string/createBarcode"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/barcodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrayBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/barcodeImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/barcodeView"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black33"
                    android:layout_marginTop="10dp"
                    android:text="1234 5678 1234 5678"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/expireView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:text="2016.06.30 까지 사용가능"
                android:textColor="@color/black33"
                android:textSize="9sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storeInformation"
                android:textColor="@color/black33"
                android:textSize="13sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/grayBackground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telephone"
                        android:textColor="@color/gray99"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/note"
                        android:textColor="@color/gray99"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/address"
                        android:textColor="@color/gray99"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/telView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="02-1234-5678"
                        android:textColor="@color/black33"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/noticeView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="기타 할인 혜택과 중복 사용 불가"
                        android:textColor="@color/black33"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/addressView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="서울시 강남구 역삼동 123"
                        android:textColor="@color/black33"
                        android:textSize="13sp" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@mipmap/map" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/businessHours"
                        android:textColor="@color/gray99"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/otherNote"
                        android:textColor="@color/gray99"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/openHoursView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10:00 ~ 18:00 (일요일 휴무)"
                        android:textColor="@color/black33"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/etcView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="애완견 출입 금지 업소"
                        android:textColor="@color/black33"
                        android:textSize="13sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>